tests/failing/func-call-not-found.c

int existing_function(int a) {
    return 0;
}

int main() {
    function_that_does_not_exist(123);
}
